--- a/model.ipynb
+++ b/model.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bf1bdd52",
+   "metadata": {},
+   "source": [
+    "![SPOTIFY](spotify.png) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13862c99",
    "metadata": {},
    "source": [
@@ -10,10 +18,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c403c61",
+   "metadata": {},
+   "source": [
+    "#### Authors: Adithya Bhonsley, Prayaag Gupta, Benjamin Wang, Dinesh Polisetty "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bbb02ae2",
    "metadata": {},
    "source": [
-    "In this era of digital music, understanding the dynamics of song popularity is more intriguing than ever! With millions of songs available at our fingertips, we were curious to leverage machine learning to launch a data-driven exploration into what makes songs hits. For our experiments, we'll take a closer look into Spotify, one of the largest music streaming platforms in the world, and aim to predict song popularity through a variety of different modeling and analysis techniques."
+    "In this era of digital music, understanding the dynamics of song popularity is more intriguing than ever! With millions of songs available at our fingertips, we were curious to leverage machine learning to launch a data-driven exploration into what makes songs hits. For our experiments, we'll take a closer look into Spotify, one of the largest music streaming platforms in the world, and aim to predict song popularity through a variety of different modeling and analysis techniques covered in class. Below is the methodology we follow throughout this notebook for our experiments:\n",
+    "\n",
+    "* **Fetch**: Collect input data from various sources and synthesize\n",
+    "* **Modify**: Run data pre-processing, cleaning, and feature selection/engineering\n",
+    "* **Analyze**: Examine data using varying models, optimize through hyperparamater tuning, and compare\n",
+    "* **Discuss**: Present results and visualizations to draw meaningful insights"
    ]
   },
   {
