--- a/model.ipynb
+++ b/model.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "fbf92272",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "pd.options.display.max_seq_items = 2000\n"
    ]
   },
   {
@@ -1029,13 +1030,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"artists\": {\n",
+      "        \"href\": \"https://api.spotify.com/v1/search?query=artist%3AEd+Sheeran&type=artist&offset=0&limit=10\",\n",
+      "        \"items\": [\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 115350283\n",
+      "                },\n",
+      "                \"genres\": [\n",
+      "                    \"pop\",\n",
+      "                    \"singer-songwriter pop\",\n",
+      "                    \"uk pop\"\n",
+      "                ],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/6eUKZXaKkcviH0Ku9w2n3V\",\n",
+      "                \"id\": \"6eUKZXaKkcviH0Ku9w2n3V\",\n",
+      "                \"images\": [\n",
+      "                    {\n",
+      "                        \"height\": 640,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab6761610000e5eb3bcef85e105dfc42399ef0ba\",\n",
+      "                        \"width\": 640\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 320,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab676161000051743bcef85e105dfc42399ef0ba\",\n",
+      "                        \"width\": 320\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 160,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab6761610000f1783bcef85e105dfc42399ef0ba\",\n",
+      "                        \"width\": 160\n",
+      "                    }\n",
+      "                ],\n",
+      "                \"name\": \"Ed Sheeran\",\n",
+      "                \"popularity\": 86,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:6eUKZXaKkcviH0Ku9w2n3V\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/1WsYCXdezMjn0KoIrLvMmC\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 3567\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/1WsYCXdezMjn0KoIrLvMmC\",\n",
+      "                \"id\": \"1WsYCXdezMjn0KoIrLvMmC\",\n",
+      "                \"images\": [],\n",
+      "                \"name\": \"Ed Sheeran & Justin Bieber\",\n",
+      "                \"popularity\": 58,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:1WsYCXdezMjn0KoIrLvMmC\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/33TMePuoaglO2gkBOLa7E6\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 1243\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/33TMePuoaglO2gkBOLa7E6\",\n",
+      "                \"id\": \"33TMePuoaglO2gkBOLa7E6\",\n",
+      "                \"images\": [],\n",
+      "                \"name\": \"Edward Christopher Sheeran\",\n",
+      "                \"popularity\": 13,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:33TMePuoaglO2gkBOLa7E6\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/69OdrDqV3GdEhvyP8iZwks\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 75\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/69OdrDqV3GdEhvyP8iZwks\",\n",
+      "                \"id\": \"69OdrDqV3GdEhvyP8iZwks\",\n",
+      "                \"images\": [\n",
+      "                    {\n",
+      "                        \"height\": 640,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d0000b273553b2a14481811c1546d3183\",\n",
+      "                        \"width\": 640\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 300,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00001e02553b2a14481811c1546d3183\",\n",
+      "                        \"width\": 300\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 64,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00004851553b2a14481811c1546d3183\",\n",
+      "                        \"width\": 64\n",
+      "                    }\n",
+      "                ],\n",
+      "                \"name\": \"Ed Sheeranivashan\",\n",
+      "                \"popularity\": 0,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:69OdrDqV3GdEhvyP8iZwks\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/2czT7fmCNgyXkQAZqjYBb8\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 2874\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/2czT7fmCNgyXkQAZqjYBb8\",\n",
+      "                \"id\": \"2czT7fmCNgyXkQAZqjYBb8\",\n",
+      "                \"images\": [\n",
+      "                    {\n",
+      "                        \"height\": 640,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d0000b2730270a4af75af4b9902e13432\",\n",
+      "                        \"width\": 640\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 300,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00001e020270a4af75af4b9902e13432\",\n",
+      "                        \"width\": 300\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 64,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d000048510270a4af75af4b9902e13432\",\n",
+      "                        \"width\": 64\n",
+      "                    }\n",
+      "                ],\n",
+      "                \"name\": \"Ed Sheeran Band\",\n",
+      "                \"popularity\": 1,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:2czT7fmCNgyXkQAZqjYBb8\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/2Vvz9VlewaR5wMQPrEZhC2\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 419\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/2Vvz9VlewaR5wMQPrEZhC2\",\n",
+      "                \"id\": \"2Vvz9VlewaR5wMQPrEZhC2\",\n",
+      "                \"images\": [],\n",
+      "                \"name\": \"Ed Sheeran;Amy Wadge\",\n",
+      "                \"popularity\": 0,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:2Vvz9VlewaR5wMQPrEZhC2\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/1bgoHMYkNqVC9PTOrQECts\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 94\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/1bgoHMYkNqVC9PTOrQECts\",\n",
+      "                \"id\": \"1bgoHMYkNqVC9PTOrQECts\",\n",
+      "                \"images\": [],\n",
+      "                \"name\": \"Ed Sheeran Taylor Swift\",\n",
+      "                \"popularity\": 1,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:1bgoHMYkNqVC9PTOrQECts\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/0aJCbHVbqpCb6pMGzaImjo\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 1\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/0aJCbHVbqpCb6pMGzaImjo\",\n",
+      "                \"id\": \"0aJCbHVbqpCb6pMGzaImjo\",\n",
+      "                \"images\": [\n",
+      "                    {\n",
+      "                        \"height\": 640,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d0000b273f250b7a407cf9c59033ea3db\",\n",
+      "                        \"width\": 640\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 300,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00001e02f250b7a407cf9c59033ea3db\",\n",
+      "                        \"width\": 300\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 64,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00004851f250b7a407cf9c59033ea3db\",\n",
+      "                        \"width\": 64\n",
+      "                    }\n",
+      "                ],\n",
+      "                \"name\": \"The Ed Sheeran piano cover smooth boys band\",\n",
+      "                \"popularity\": 0,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:0aJCbHVbqpCb6pMGzaImjo\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"external_urls\": {\n",
+      "                    \"spotify\": \"https://open.spotify.com/artist/1Z0WmCLR82kNDewi2fO9RD\"\n",
+      "                },\n",
+      "                \"followers\": {\n",
+      "                    \"href\": null,\n",
+      "                    \"total\": 25\n",
+      "                },\n",
+      "                \"genres\": [],\n",
+      "                \"href\": \"https://api.spotify.com/v1/artists/1Z0WmCLR82kNDewi2fO9RD\",\n",
+      "                \"id\": \"1Z0WmCLR82kNDewi2fO9RD\",\n",
+      "                \"images\": [\n",
+      "                    {\n",
+      "                        \"height\": 640,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d0000b273b0f86cb09dbe3e93c9bb18be\",\n",
+      "                        \"width\": 640\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 300,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00001e02b0f86cb09dbe3e93c9bb18be\",\n",
+      "                        \"width\": 300\n",
+      "                    },\n",
+      "                    {\n",
+      "                        \"height\": 64,\n",
+      "                        \"url\": \"https://i.scdn.co/image/ab67616d00004851b0f86cb09dbe3e93c9bb18be\",\n",
+      "                        \"width\": 64\n",
+      "                    }\n",
+      "                ],\n",
+      "                \"name\": \"Ed Sheeran Piano Covers\",\n",
+      "                \"popularity\": 3,\n",
+      "                \"type\": \"artist\",\n",
+      "                \"uri\": \"spotify:artist:1Z0WmCLR82kNDewi2fO9RD\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"limit\": 10,\n",
+      "        \"next\": null,\n",
+      "        \"offset\": 0,\n",
+      "        \"previous\": null,\n",
+      "        \"total\": 9\n",
+      "    }\n",
+      "}\n",
+      "The top genres for Ed Sheeran are: ['pop', 'singer-songwriter pop', 'uk pop']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "track_name                0\n",
+       "artist(s)_name            0\n",
+       "artist_count              0\n",
+       "in_spotify_playlists      0\n",
+       "in_spotify_charts         0\n",
+       "streams                   1\n",
+       "in_apple_playlists        0\n",
+       "in_apple_charts           0\n",
+       "in_deezer_playlists      79\n",
+       "in_deezer_charts          0\n",
+       "in_shazam_charts          7\n",
+       "bpm                       0\n",
+       "key                       0\n",
+       "mode                      0\n",
+       "danceability_%            0\n",
+       "valence_%                 0\n",
+       "energy_%                  0\n",
+       "acousticness_%            0\n",
+       "instrumentalness_%        0\n",
+       "liveness_%                0\n",
+       "speechiness_%             0\n",
+       "season                    0\n",
+       "genre                   386\n",
+       "num_followers           372\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import json\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "#Getting the genre of a song with the spotify API and using the artist name"
+    "\n",
+    "#Getting the genre of a song and popularity of an artist with the spotify API\n",
+    "def read_spotify_credentials(file_path):\n",
+    "    credentials = {}\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            key, value = line.strip().split('=')\n",
+    "            credentials[key] = value\n",
+    "    return credentials\n",
+    "\n",
+    "credentials_file_path = 'spotify_credentials.txt'\n",
+    "spotify_credentials = read_spotify_credentials(credentials_file_path)\n",
+    "client_credentials_manager = SpotifyClientCredentials(\n",
+    "    client_id=spotify_credentials['client_id'],\n",
+    "    client_secret=spotify_credentials['client_secret']\n",
+    ")\n",
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager, requests_timeout=5)\n",
+    "\n",
+    "def get_top_genre(artist_name):\n",
+    "    results = sp.search(q='artist:' + artist_name, type='artist')\n",
+    "    #print(json.dumps(results, indent=4, sort_keys=True))\n",
+    "\n",
+    "    if len(results['artists']['items']) > 0:\n",
+    "        artist_id = results['artists']['items'][0]['id']\n",
+    "        if len(sp.artist(artist_id)['genres']) > 0:\n",
+    "            return sp.artist(artist_id)['genres'][0]\n",
+    "        else:\n",
+    "            return None\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def get_num_followers(artist_name):\n",
+    "    results = sp.search(q='artist:' + artist_name, type='artist')\n",
+    "    #print(json.dumps(results, indent=4, sort_keys=True))\n",
+    "\n",
+    "    if len(results['artists']['items']) > 0:\n",
+    "        artist_id = results['artists']['items'][0]['id']\n",
+    "        num_followers = results['artists']['items'][0]['followers']['total']\n",
+    "        return num_followers\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "#data['genre'] = data['artist(s)_name'].apply(get_top_genre)\n",
+    "#data['num_followers'] = data['artist(s)_name'].apply(get_num_followers)\n",
+    "data.head()\n",
+    "data.isna().sum()\n",
+    "\n",
+    "# Are these the columns that we should drop? Also how do we want to fill in the null values for genre and popularity?\n",
+    "# columns_to_drop = ['track_name', 'artist(s)_name', 'in_apple_playlists', 'in_apple_charts', 'in_deezer_playlists', 'in_deezer_charts', 'in_shazam_charts']\n",
+    "# data = data.drop(columns=columns_to_drop)\n"
    ]
   },
   {
